--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p style="margin-left: 20px">
       The world of Ruaneia consists of four continents (... in the West,
       <i>"Desharim"</i> in the Center, ... in the East, ... in the South) and
-      the northern ice shelf.
+      the northern ice shelf. Bla Bla Bla...
     </p>
     <!-- Add an image with a maximum width of the currently shown content and a 1px wide black border-->
     <img
