--- a/History.html
+++ b/History.html
@@ -16,8 +16,10 @@
     </div>
   </head>
 
-  <body class="container">
-    <!--Set a Heading with a margin of 20 px and automatic alignment-->
-    <h1 style="margin: 20px; align-self: auto">History of Ruaneia</h1>
+  <body>
+    <div class="container">
+      <!--Set a Heading with a margin of 20 px and automatic alignment-->
+      <h1 style="margin: 20px; align-self: auto">History of Ruaneia</h1>
+    </div>
   </body>
 </html>
