--- a/Characters.html
+++ b/Characters.html
@@ -16,17 +16,19 @@
     </div>
   </head>
 
-  <body class="container">
-    <!--Set a Heading with a margin of 20 px and automatic alignment-->
-    <h1 style="margin: 20px; align-self: auto">
-      Notable Characters of Ruaneia
-    </h1>
-    <div id="boxContainer">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
-      <div class="box">4</div>
-      <div class="box">5</div>
+  <body>
+    <div class="container">
+      <!--Set a Heading with a margin of 20 px and automatic alignment-->
+      <h1 style="margin: 20px; align-self: auto">
+        Notable Characters of Ruaneia
+      </h1>
+      <div id="boxContainer">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+      </div>
     </div>
   </body>
 </html>
