--- a/index.html
+++ b/index.html
@@ -1,68 +1,83 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <!-- Add meta tag to create responsive design across devices -->
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Add external CSS styles to this HTML document -->
-    <link rel="stylesheet" href="CSS/Searchbar.css" />
-    <link rel="stylesheet" href="CSS/Pagestyle.css" />
-
-    <!-- Add external JS files -->
-    <script src="JS/main.js"></script>
-
-    <!-- Define a name for the browser tab -->
-    <title>Adventurers Guide to Ruaneia</title>
-
-    <!-- Create navigation bar with styles defined in external CSS document -->
-    <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="History.html">History</a>
-      <a href="Characters.html">Characters</a>
-      <input type="text" placeholder="Search..." />
-    </div>
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
+    <title>Ruaneia: Campaign Setting</title>
   </head>
 
   <body>
+    <!-- Create navigation bar with styles defined in external CSS document -->
+    <div class="topnav">
+      <a class="active" id="currentPage">Home</a>
+      <div id="menuLinks" class="menu-links">
+        <a class="active" href="index.html">Home</a>
+        <div class="dropdown">
+          <button class="dropdown-button">
+            Adventure <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="Campaign Premise.html">Campaign Premise</a>
+          </div>
+        </div>
+        <a href="Calendar & Time.html">Calendar & Time</a>
+        <a href="Characters.html">Characters</a>
+        <input type="text" placeholder="Search..." />
+      </div>
+      <button class="menu-button" onclick="toggleMenu()">☰ Menu</button>
+    </div>
+
     <div class="container">
       <div class="snap-scroll-container">
         <div class="snap-scroll-section">
-          <!--Set a Heading with a margin of 20 px and automatic alignment-->
-          <h1 style="margin: 20px; align-self: auto">
-            Welcome to an <i> Adventurers Guide to Ruaneia </i>
-          </h1>
-          <p style="margin-left: 20px">
-            The world of Ruaneia consists of four continents (... in the West,
-            <i>"Desharim"</i> in the Center, ... in the East, ... in the South)
-            and the northern ice shelf. Bla Bla Bla...
-          </p>
-
-          <!-- Add an image with a maximum width of 100% (of the page/container it sits in) and a 1px wide black border -->
-          <!-- In this case, boxContainer is used as flexbox to allow for easier centering of the image -->
-          <div id="boxContainer">
-            <div class="imageBox" style="width: 50%">
+          <h1>Welcome to an <i> Adventurers Guide to Ruaneia </i></h1>
+          <div class="text-image-container">
+            <div class="scrollable-text">
+              <p>
+                The world of Ruaneia consists of four continents (... in the
+                West,
+                <i>"Desharim"</i> in the Center, ... in the East, ... in the
+                South) and the northern ice shelf.
+              </p>
+              <br />
+              <p><i>Work in Progress...</i></p>
+            </div>
+            <div class="imageContainer">
               <img
-                style="width: 100%; border: 1px solid; border-color: black"
+                style="width: 45vw; justify-self: center"
                 src="images/Ruaneia.png"
                 alt="A roughly drawn map of the World of Ruaneia"
               />
             </div>
           </div>
         </div>
-
         <div class="snap-scroll-section">
-          <h1 style="margin: 20px">What sets <i>Ruaneia</i> apart</h1>
-          <p>Test</p>
-          <div id="boxContainer" style="max-height: 100%">
-            <div class="box"></div>
-            <div class="box" style="height: 75vh"></div>
-            <div class="box"></div>
-          </div>
-        </div>
-
-        <div class="snap-scroll-section">
-          <h2 style="margin: 20px">Impressum</h2>
-          <p>Test</p>
-          <div id="boxContainer"></div>
+          <h1>What makes <i>Ruaneia</i> unique?</h1>
+          <h2>Aether engulfs the world of Ruaneia.</h2>
+          <p>
+            Aether is a mysterious energy older than the world itself,
+            surrounding the known universe. Magic and Monsters are believed to
+            originate from the Aether. In very rare cases, humanoids are born
+            with a touch of Aether, giving them higher aptitudes for magic,
+            enhancing their physical prowess and making them more resilient to
+            injuries and illnesses. The first record of such an Aetherborn dates
+            back several thousands years, and yet little is known about the
+            Aether itself or what causes the birth of Aetherborns.
+          </p>
+          <br />
+          <h2>Player Characters are Aetherborn.</h2>
+          <p>
+            Faintly touched by the mysterious Aether, the characters are capable
+            of feats that would not be possible for average humanoids. Many
+            people revere Aetherborns in high esteem, seeing them as saviours or
+            protectors from the threats of the world. However, others see their
+            connection to a vastly mysterious and potentially dangerous source
+            of energy, as a threat and seek to rid the world of such
+            abominations.
+          </p>
+          <br />
         </div>
       </div>
     </div>
