--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="main.js"></script>
-    <title>Ruaneia: Campaign Setting</title>
+    <title>Ruaneia</title>
   </head>
 
   <body>
@@ -23,8 +27,18 @@
           </div>
         </div>
         <a href="Calendar & Time.html">Calendar & Time</a>
-        <a href="Characters.html">Characters</a>
-        <input type="text" placeholder="Search..." />
+        <div class="dropdown">
+          <button class="dropdown-button">
+            Factions <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="Freelance Orders.html">Freelance Orders</a>
+            <a href="Governmental Organisations.html"
+              >Governmental Organisations</a
+            >
+          </div>
+        </div>
+        <!-- <input type="text" placeholder="Search..." /> -->
       </div>
       <button class="menu-button" onclick="toggleMenu()">☰ Menu</button>
     </div>
@@ -42,7 +56,7 @@
                 South) and the northern ice shelf.
               </p>
               <br />
-              <p><i>Work in Progress...</i></p>
+              <p><i>Work in Progress... (Scroll down for more)</i></p>
             </div>
             <div class="imageContainer">
               <img
@@ -57,14 +71,15 @@
           <h1>What makes <i>Ruaneia</i> unique?</h1>
           <h2>Aether engulfs the world of Ruaneia.</h2>
           <p>
-            Aether is a mysterious energy older than the world itself,
-            surrounding the known universe. Magic and Monsters are believed to
-            originate from the Aether. In very rare cases, humanoids are born
-            with a touch of Aether, giving them higher aptitudes for magic,
-            enhancing their physical prowess and making them more resilient to
-            injuries and illnesses. The first record of such an Aetherborn dates
-            back several thousands years, and yet little is known about the
-            Aether itself or what causes the birth of Aetherborns.
+            Aether is a mysterious energy older even than the gods of the world
+            itself, surrounding the known universe. Magic and Monsters are
+            believed to originate from the Aether. In very rare cases, humanoids
+            are born with a touch of Aether, giving them higher aptitudes for
+            magic, enhancing their physical prowess and making them more
+            resilient to injuries and illnesses. The first record of such an
+            Aetherborn dates back several thousands of years, and yet little is
+            known about the Aether itself or about what causes the birth of
+            Aetherborns.
           </p>
           <br />
           <h2>Player Characters are Aetherborn.</h2>
@@ -76,6 +91,22 @@
             connection to a vastly mysterious and potentially dangerous source
             of energy, as a threat and seek to rid the world of such
             abominations.
+            <br />
+            <b>Mechanical Changes.</b> Player Characters (PCs), as Aetherborn,
+            can exceed a level cap that non-Aetherborn cannot. This level cap
+            can be assumed to be somewhere between levels 7 and 12, due to the
+            fact that in some rare cases, through exhaustive training and
+            deication, people are able to reach heights that are deemed
+            impossible for non-Aetherborn.
+            <br />
+            The magical nature of the Aether lets PCs recover faster from
+            injuries, fully healing within a good nights rest, rather than over
+            the course of several days and only under supervision of doctors and
+            healers or through the administering of medicines. Further, this
+            magical aptitude allows any PC to cast
+            <i>Spell Scrolls</i> without the need for prior knowledge of the
+            enscribed spell. And decreases the time it takes to consume a potion
+            and wait for its effect.
           </p>
           <br />
         </div>
